# QuickChat

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION_GUIDE_V2_TO_V3.md  README.md  SECURITY.md  SUPPORT.md
.cargo/: audit.toml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
crates/plugins/live_code/: Cargo.toml
crates/plugins/live_code/src/: lib.rs
crates/plugins/ping/: Cargo.toml
crates/plugins/ping/src/: lib.rs
crates/quickchat_cli/: Cargo.toml
crates/quickchat_cli/src/: main.rs
crates/quickchat_core/: Cargo.toml
crates/quickchat_core/src/: db.rs  event_bus.rs  file_manager.rs  identity.rs  ipc.rs  lib.rs  mls.rs
crates/quickchat_core/tests/: integration_tests.rs
crates/quickchat_dht/: Cargo.toml
crates/quickchat_dht/src/: lib.rs
crates/quickchat_dht/tests/: dht_tests.rs
crates/quickchat_net/: Cargo.toml
crates/quickchat_net/src/: discovery.rs  lib.rs  magic.rs  quic.rs
crates/quickchat_plugin_host/: Cargo.toml
crates/quickchat_plugin_host/src/: lib.rs  memory.rs  runtime.rs
crates/quickchat_plugin_sdk/: Cargo.toml
crates/quickchat_plugin_sdk/src/: host_bindings.rs  lib.rs
crates/quickchat_relay/: Cargo.toml  Dockerfile
crates/quickchat_relay/src/: main.rs
crates/quickchat_tui/: Cargo.toml
crates/quickchat_tui/src/: app.rs  lib.rs  theme.rs  ui.rs
crates/quickchat_types/: Cargo.toml  build.rs
crates/quickchat_types/proto/: message.proto
crates/quickchat_types/src/: lib.rs
docs/reviews/: 01_Project_Understanding.md  02_Document_Audit.md  03_Architecture_Review.md  04_V1_Audit.md  05_Competitor_Analysis.md  06_Risks_and_Gaps.md  07_Implementation_Roadmap.md  08_Final_Recommendations.md
docs/version2/: 01_Version2_Analysis.md  02_Architecture_Plan.md  03_Plugin_Ecosystem.md  04_Networking_Scaling.md  05_Security_Enhancements.md  06_Collaboration_Features.md  07_Enterprise_Features.md  08_UI_UX_Evolution.md  09_Monetization_OpenSource.md  10_Final_Recommendations.md
docs/version3/: 01_Project_Analysis.md  02_Version3_Vision.md  07_Engineering_Roadmap.md  12_Implementation_Plan.md  13_Milestone_Breakdown.md  14_Final_Recommendations.md
docs/version3_audit/: 01_Executive_Summary.md  02_Requirements_Traceability.md  03_Milestone_1_Audit.md  04_Milestone_2_Audit.md  05_Milestone_3_Audit.md  06_Milestone_4_Audit.md  07_Architecture_Audit.md  08_Code_Quality_Audit.md  09_Testing_Audit.md  10_Documentation_Audit.md  11_Open_Source_Readiness.md  12_Risk_Assessment.md  13_Missing_Features.md  14_Final_Recommendation.md
docs/version3_final_audit/: 01_Executive_Summary.md  02_Requirements_Traceability.md  03_Architecture_Review.md  04_Code_Quality.md  05_Security_Audit.md  06_Testing_Report.md  07_CI_Report.md  08_Documentation_Review.md  09_Open_Source_Readiness.md  10_Final_Recommendation.md
docs/version3_release_validation/: FINAL_AUDIT.md
