[package]
name = "quickchat_cli"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bytes = "1.12.1"
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.32"
hex = "0.4.3"
local-ip-address = "0.6.13"
magic-wormhole = "0.8.1"
mdns-sd = "0.20.1"
prost = "0.14.4"
quickchat_core = { version = "2.0.0", path = "../quickchat_core" }
quickchat_net = { version = "2.0.0", path = "../quickchat_net" }
quickchat_tui = { version = "2.0.0", path = "../quickchat_tui" }
quickchat_types = { version = "2.0.0", path = "../quickchat_types" }
quinn = "0.11.11"
ratatui = "0.30.2"
tokio = { version = "1.52.4", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.24.0", features = ["v4"] }
