[package]
name = "quickchat_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bytes = "1.12.1"
ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }
futures = "0.3.32"
getrandom = "0.4.3"
prost = "0.14.4"
quickchat_types = { version = "0.1.0", path = "../quickchat_types" }
quinn = "0.11.11"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
tokio = { version = "1.52.4", features = ["fs", "io-util", "rt", "macros"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
x25519-dalek = { version = "3.0.0", features = ["static_secrets"] }
zstd = "0.13.3"
